# agmetpy

./: .gitignore  LICENSE  README.md  Untitled-1.py  Untitled-2.py  setup.cfg  setup.py  test.py
docs/notebooks/: toolbox.ipynb  water_balance.ipynb
notebooks/: drainage.ipynb
src/: __main__.py
src/agmetpy/: __init__.py  toolbox.py  wb.py
src/agmetpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/agmetpy/thornthwaite/: __init__.py
src/agmetpy/waterbalance/: __init__.py
src/agmetpy/wb/: __init__.py  array_collection.py  crop.py  simulation.py  soil.py  stress.py  weather.py
src/test/: __init__.py  test_case_ndarray.py  test_soil.py
