[metadata]
name = agmetpy
version = 0.0.2
author = João Vitor de Nóvoa Pinto
author_email = jvitorpinto@gmail.com
description = A python package for agricultural forecasting and crop modelling.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jvitorpinto/agmetpy
project_urls =
    Bug Tracker = https://github.com/jvitorpinto/agmetpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = agmetpy
packages = find:
python_requires = >=3.6

[options.packages.find]
where = agmetpy